--- a/HelloMvcApp/Views/Shared/_Layout.cshtml
+++ b/HelloMvcApp/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
 
     <footer class="border-top footer text-muted  bg-dark">
         <div class="container text-white">
-            &copy; 2023 - Beltek Proje - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2023 - Beltek Proje - <a asp-area="" asp-controller="Home" asp-action="Privacy">Gizlilik</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
